// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section should render 1`] = `
<DocumentFragment>
  <div
    class="Section__SectionWrapper-sc-8cjvre-0 gFwrwb"
  >
    <div
      class="container py-16 px-14 mx-auto "
    />
  </div>
</DocumentFragment>
`;

exports[`Section should render with margin top 1`] = `
<DocumentFragment>
  <div
    class="Section__SectionWrapper-sc-8cjvre-0 Aphxw"
  >
    <div
      class="container py-16 px-14 mx-auto "
    />
  </div>
</DocumentFragment>
`;
